Attempt to fix scrolling on iOS

--- a/public/style.css
+++ b/public/style.css
@@ -20,12 +20,19 @@ body.app {
 }
 
 body > .body-double {
-  position: absolute;
+  /*position: absolute;
   top: 0;
   left: 0;
-  right: 0;
+  right: 0;*/
   /*bottom: 0;*/
+
   padding-top: 120px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow-y: scroll;
 }
 
 body.embed > .body-double, body.overlay > .body-double {
